--- a/demo/consul-providerd/src/main/resources/application.yml
+++ b/demo/consul-providerd/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8086
 
 servlet:
   context-path: /
@@ -20,24 +20,28 @@ spring:
   application:
       name: provider-client
       #注册的客户端名字
+  cloud:
+    consul:
+      port: 8500
+      host: localhost
 
 
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
-  type-aliases-package: com.example.providerpayment8001.pojo
+  type-aliases-package: com.example.common.pojo
   configuration:
     default-statement-timeout: 30
     map-underscore-to-camel-case: false
 
 
-eureka:
-  client:
-    service-url:
-      register-with-eureka: true
-      #表示不向注册中心注册自己
-      fetch-registry: true
-      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
-#lOG
-logging:
-  level:
-    com.example: DEBUG
+#eureka:
+#  client:
+#    service-url:
+#      register-with-eureka: true
+#      #表示不向注册中心注册自己
+#      fetch-registry: true
+#      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
+##lOG
+#logging:
+#  level:
+#    com.example: DEBUG
