--- a/demo/eurake2/pom.xml
+++ b/demo/eurake2/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>com.mySpringCloud</groupId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>demo</artifactId>
+	<artifactId>eurake2</artifactId>
 
 	<properties>
 		<java.version>1.8</java.version>
