--- a/demo/eurake2/src/main/resources/application.yml
+++ b/demo/eurake2/src/main/resources/application.yml
@@ -1,18 +1,17 @@
 spring:
   application:
-    name: eureka-server
+    name: eureka-server2
 
 server:
-  port: 2001
+  port: 2002
 
 eureka:
   server:
     enable-self-preservation: false
   instance:
-    hostname: eureka1
+    hostname: eureka2
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: false  #profile\u7684\u914D\u7F6E\u4F1A\u8986\u76D6\u516C\u7528\u914D\u7F6E
+    fetch-registry: true        #profile\u7684\u914D\u7F6E\u4F1A\u8986\u76D6\u516C\u7528\u914D\u7F6E
     service-url:
-      default-Zone: http://eureka2:2002/eureka
-  #\u8868\u793A\u81EA\u5DF1\u7AEF\u5C31\u662F\u6CE8\u518C\u4E2D\u5FC3
+      defaultZone: http://eureka1:2001/eureka
