--- a/demo/zookeeper/src/main/resources/application.yml
+++ b/demo/zookeeper/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: zookeeper_provider
+    name: zookeeper-provider
   cloud:
     zookeeper:
       connect-string: 192.168.126.129:2181
@@ -22,7 +22,6 @@ spring:
 
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
-  type-aliases-package: com.example.providerpayment8001.pojo
   configuration:
     default-statement-timeout: 30
     map-underscore-to-camel-case: false
